--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "next": "15.5.2",
